Contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,7 +25,7 @@ header {
     grid-template-columns: auto 1fr auto;
 	align-items: center;
     background-color: var(--primary-color);
-    color: var(--background-color);
+    color: var(--text-color);
 }
 
 header img {
@@ -52,7 +52,7 @@ nav {
 }
 
 header nav a {
-    color: var(--background-color);
+    color: var(--text-color);
     text-decoration: none;
     margin: 0 1em;
     font-family: 'Bree Serif', serif;
@@ -123,7 +123,7 @@ section {
 section h2 {
     font-family: 'Bree Serif', serif;
     font-size: 2rem;
-    color: var(--primary-color);
+    color: var(--text-color);
     margin-bottom: 1em;
     align-content: center;
    
@@ -179,7 +179,7 @@ section h2 {
 footer {
     text-align: center;
     background-color: var(--secondary-color);
-    color: var(--background-color);
+    color: var(--text-color);
     padding: 1em;
 }
 
